<resources>
    <string name="app_name">PetHouZtel</string>
    <string name="app_label">PetHouZtel</string>
    <string name="search_hint">Procurando alguém?</string>
    <string name="action_settings">Configurações</string>
    <string name="title_activity_login">Entrar</string>
    <string name="empty_fields">Preencha todos os campos</string>
    <string name="perfil_fragment">perfilFragment</string>
    <string name="salvando">Salvando dados</string>
    <string name="time_out">Sem resposta, tente novamente mais tarde!</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entre ou registre-se</string>
    <string name="action_sign_in_short">Registrar</string>
    <string name="prompt_repassword">Confirme a senha</string>
    <string name="action_sign_up">Não tem conta? Registre-se</string>
    <string name="error_invalid_email">Email inválido</string>
    <string name="error_invalid_password">A senha muito curta</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Campo obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="activity_cadastro_usuario">Cadastro</string>
    <string name="prompt_phone">Número (92) 00000&#8211;0000</string>
    <string name="prompt_first_name">Primeiro nome</string>
    <string name="prompt_last_name">Ultimo nome</string>
    <string name="error_create_new_user">Aconteceu um erro ao tentar criar a conta</string>
    <string name="error_user_already_exist">Usuário já existe</string>
    <string name="error_unkown_signin">Erro ao tentar entrar, tente novamente mais tarde</string>

    <!-- Strings related to facebook login -->
    <string name="facebook_app_id">678714429187142</string>
    <string name="fb_login_protocol_scheme">fb678714429187142</string>

    <!-- Strings related to toolbars -->
    <string name="menu_perfil">Meu Perfil</string>
    <string name="menu_deslogar">Sair</string>
    <string name="action_menu_search">Procurar</string>
    <string name="menu_pedido">Meus Pedidos</string>

    <!-- Strings related to pefil -->
    <string name="texto">Texto</string>
    <string name="primeiro_nome">Primeiro Nome</string>
    <string name="ultimo_nome">Ultimo Nome</string>
    <string name="data_nascimento">Data de Nascimento</string>
    <string name="telefone">Telefone</string>
    <string name="descricao">Descrição</string>

    <!-- Strings related to fragment title -->
    <string name="fragment_perfil">Perfil</string>
    <string name="fragment_pet">Pets</string>
    <string name="fragment_hospedador">Hospedador</string>
    <string name="fragment_logradouro">Local</string>
    <string name="fragment_hospedador_listagem_detalhe">Hospedador</string>
    <string name="fragment_hospedador_listagem_detalhe_perfil">Perfil</string>
    <string name="fragment_hospedador_listagem_detalhe_local">Local</string>
    <string name="fragment_hospedador_listagem">Hospedadores</string>
    <string name="fragment_hospedador_servico">Serviços</string>
    <string name="fragment_servico_detalhe">Serviço</string>
    <string name="fragment_pedido_listagem">Pedidos</string>
    <string name="fragment_pedido_detalhe">Pedidos</string>
    <string name="fragment_hospedador_perfil">Hospedador</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_cancel_action">Cancelar</string>
    <string name="fragment_confirm_action">Confirmar</string>
    <string name="fragment_reject_action">Rejeitar</string>
    <string name="fragment_cancel_request_action">Cancelar Pedido</string>

    <!-- Strings related to fragmento formulatrio -->
    <string name="data_inicio">Data de Início</string>
    <string name="data_final">Data de Término</string>
    <string name="preco_total">Preço total:</string>
    <string name="novo_servico_sucesso">Serviço requisitado</string>

    <!-- out of order -->
    <string name="menu_perfil_pets">Meus Pets</string>
    <string name="menu_perfil_local">Meu Local</string>
    <string name="menu_perfil_hospedador">Hospedador</string>
    <string name="fragment_pet_detalhe_menu_add">Adicionar pet</string>
    <string name="fragment_pet_cadastro_macho">Macho</string>
    <string name="fragment_pet_cadastro_femea">Fêmea</string>
    <string name="fragment_pet_castrado_castrado">Castrado</string>
    <string name="fragment_pet_castrado_vacinado">Vacinado</string>
    <string name="fragment_pet_detalhe_menu_remover">Remover</string>
    <string name="fragment_pet_detalhe_menu_editar">Editar</string>
    <string name="aceita_servico">Eu concordo e aceito o serviço</string>
    <string name="popup_filtro_escolha">Escolha os seus filtros</string>
    <string name="fragment_hospedador_mensagem">Conversa</string>
</resources>
