<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/novo_usuario_passo1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NovoUsuarioPasso1" >

    <EditText
        android:id="@+id/editMail"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:hint="@string/prompt_email"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="18sp"
        android:nextFocusForward="@+id/editPass"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/ic_text_icon_email" />

    <EditText
        android:id="@+id/editPass1"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/editMail"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textSize="18sp"
        android:drawableLeft="@drawable/ic_text_icon_password" />

    <EditText
        android:id="@+id/editPass2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@+id/editPass1"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/prompt_repassword"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textSize="18sp"
        android:drawableLeft="@drawable/ic_text_icon_password" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/arrow_forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        android:scaleType="center"
        android:src="@drawable/ic_float_button_foward"
        android:visibility="visible"
        android:tint="#ffffff"
        app:backgroundTint="#121212"/>

</RelativeLayout>