<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/novo_usuario_passo2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NovoUsuarioPasso2" >

    <EditText
        android:id="@+id/editPhone"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:hint="@string/prompt_phone"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="18sp"
        android:nextFocusDown="@+id/editFirstName"
        android:singleLine="true"
        android:inputType="phone"
        android:drawableLeft="@drawable/ic_text_icon_phone"
        android:drawableStart="@drawable/ic_text_icon_phone"/>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/editPhone"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true" >

        <EditText
            android:id="@+id/editFirstName"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/prompt_first_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="18sp"
            android:nextFocusDown="@+id/editLastName"
            android:singleLine="true" />

        <EditText
            android:id="@+id/editLastName"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:hint="@string/prompt_last_name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="18sp"
            android:nextFocusForward="@+id/editPass"
            android:singleLine="true" />
    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/arrow_forward_novo_usuario2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_margin="@dimen/fab_margin"
        android:scaleType="center"
        android:src="@drawable/ic_float_button_foward"
        android:visibility="visible"
        android:tint="#ffffff"
        app:backgroundTint="#121212"/>

</RelativeLayout>