<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/hospedador_servico_detalhe"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:clickable="true"
    android:focusable="true"
    tools:context=".HospedadorServicoDetalheFragment">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/hospedador_servico_detalhe_perfil"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/mob_user_175"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/hospedador_servico_detalhe_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/hospedador_servico_detalhe_perfil"
        app:layout_constraintTop_toTopOf="@+id/hospedador_servico_detalhe_perfil"
        tools:text="Nome Completo" />

    <TextView
        android:id="@+id/hospedador_servico_detalhe_datainicio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toStartOf="@+id/hospedador_servico_detalhe_nome"
        app:layout_constraintTop_toBottomOf="@+id/hospedador_servico_detalhe_nome"
        tools:text="Data de Inicio" />

    <TextView
        android:id="@+id/hospedador_servico_detalhe_datafim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        tools:text="Data de Fim"
        app:layout_constraintStart_toStartOf="@+id/hospedador_servico_detalhe_datainicio"
        app:layout_constraintTop_toBottomOf="@+id/hospedador_servico_detalhe_datainicio" />

    <TextView
        android:id="@+id/hospedador_servico_detalhe_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        tools:text="Total de Pets"
        app:layout_constraintStart_toStartOf="@+id/hospedador_servico_detalhe_datafim"
        app:layout_constraintTop_toBottomOf="@+id/hospedador_servico_detalhe_datafim" />

    <android.support.v4.view.ViewPager
        android:id="@+id/hospedador_servico_detalhe_pager"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/hospedador_servico_detalhe_perfil"
        app:layout_constraintTop_toBottomOf="@+id/hospedador_servico_detalhe_perfil" />

    <Button
        android:id="@+id/hospedador_servico_detalhe_rejeitar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/fragment_reject_action"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.47" />

    <Button
        android:id="@+id/hospedador_servico_detalhe_confirmar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/fragment_confirm_action"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/hospedador_servico_detalhe_rejeitar"
        app:layout_constraintWidth_percent="0.47" />

    <CheckBox
        android:id="@+id/hospedador_servico_detalhe_aceitar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/aceita_servico"
        app:layout_constraintBottom_toTopOf="@+id/hospedador_servico_detalhe_rejeitar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/hospedador_servico_detalhe_pager"
        app:layout_constraintTop_toBottomOf="@+id/hospedador_servico_detalhe_pager" />


</android.support.constraint.ConstraintLayout>